[gd_scene load_steps=3 format=2]

[ext_resource path="res://main_menu/home/home.gd" type="Script" id=1]
[ext_resource path="res://menu.theme" type="Theme" id=2]

[node name="Home" type="Control"]
anchor_right = 0.999999
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TitleLabel" type="Label" parent="."]
anchor_top = 0.0466667
anchor_right = 1.0
anchor_bottom = 0.266667
margin_bottom = -1.52588e-05
theme_type_variation = "Header1"
text = "GAME TITLE HERE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.0361328
anchor_top = 0.473333
anchor_right = 0.229492
anchor_bottom = 0.965
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BtnLevelSelect" type="Button" parent="Buttons"]
margin_top = 72.0
margin_right = 197.0
margin_bottom = 90.0
text = "Level Select"

[node name="BtnControls" type="Button" parent="Buttons"]
margin_top = 105.0
margin_right = 197.0
margin_bottom = 123.0
text = "Controls"

[node name="BtnSettings" type="Button" parent="Buttons"]
margin_top = 138.0
margin_right = 197.0
margin_bottom = 156.0
text = "Settings"

[node name="BtnAbout" type="Button" parent="Buttons"]
margin_top = 171.0
margin_right = 197.0
margin_bottom = 189.0
text = "About"

[node name="BtnQuit" type="Button" parent="Buttons"]
margin_top = 204.0
margin_right = 197.0
margin_bottom = 222.0
text = "Quit"

[connection signal="pressed" from="Buttons/BtnLevelSelect" to="." method="_on_btn_level_pressed"]
[connection signal="pressed" from="Buttons/BtnControls" to="." method="_on_btn_controls_pressed"]
[connection signal="pressed" from="Buttons/BtnSettings" to="." method="_on_btn_settings_pressed"]
[connection signal="pressed" from="Buttons/BtnAbout" to="." method="_on_btn_about_pressed"]
[connection signal="pressed" from="Buttons/BtnQuit" to="." method="_on_btn_exit_pressed"]
